--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="box2_item it03">
           <div class="avata">
-            <img src="./images/Betterimage.ai_1735571493755.jpeg" alt="" class="image_item">
+            <img src="../images/Betterimage.ai_1735571493755.jpeg" alt="" class="image_item">
           </div>
         </div>
         <div class="box2_item it04">
