--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="box2_item it03">
           <div class="avata">
-            <img src="/images/avata.jpg" alt="" class="image_item">
+            <img src="./images/avata.jpg" alt="" class="image_item">
           </div>
         </div>
         <div class="box2_item it04">
