Commit local changes

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <h1 class="box5__tieude">Chứng chỉ - Giải thưởng</h1>
         <div class="box05__item1">
           <div class="box05__content box05__content--01">
-            <img src="../images/Cert_DBI.png" alt="" class="box05__content--img">
+            <img src="./images/Cert_DBI.png" alt="" class="box05__content--img">
             <ul class="box05__content--list">
               <h3 class="box05__content--list--tieude">CHỨNG CHỈ LẬP TRÌNH WEB - FUNIX</h3>
               <li class="box05__content--list--content">Chứng chỉ thuộc cương trình CCDN</li>
@@ -220,7 +220,7 @@
             </ul>
           </div>
           <div class="box05__content">
-            <img src="../images/Cert_PRF.png" alt="" class="box05__content--img">
+            <img src="./images/Cert_PRF.png" alt="" class="box05__content--img">
             <ul class="box05__content--list">
               <h3 class="box05__content--list--tieude">CHỨNG CHỈ LẬP TRÌNH JAVA BACKEND - FUNIX</h3>
               <li class="box05__content--list--content">Chứng chỉ thuộc cương trình CCDN</li>
@@ -230,7 +230,7 @@
         </div>
         <div class="box05__item2">
           <div class="box05__content">
-            <img src="../images/Cert_WEB.png" alt="" class="box05__content--img">
+            <img src="./images/Cert_WEB.png" alt="" class="box05__content--img">
             <ul class="box05__content--list">
               <h3 class="box05__content--list--tieude">CHỨNG CHỈ thiết kế DATABASE - FUNIX</h3>
               <li class="box05__content--list--content">Chứng chỉ thuộc cương trình CCDN</li>
@@ -242,9 +242,9 @@
       <div class="box06">
         <h1 class="box06__tieude">Dự án</h1>
         <div class="box06__items">
-          <img src="../images/Screenshot 2024-12-30 212145.png" alt="" class="box06__items--img">
-          <img src="../images/Screenshot 2024-12-30 212328.png" alt="" class="box06__items--img">
-          <img src="../images/Screenshot 2024-12-30 212348.png" alt="" class="box06__items--img">
+          <img src="./images/Screenshot 2024-12-30 212145.png" alt="" class="box06__items--img">
+          <img src="./images/Screenshot 2024-12-30 212328.png" alt="" class="box06__items--img">
+          <img src="./images/Screenshot 2024-12-30 212348.png" alt="" class="box06__items--img">
         </div>
       </div>
       <div class="box07">
