Commit local changes

--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
       <div class="box06">
         <h1 class="box06__tieude">Dự án</h1>
         <div class="box06__items">
-          <img src="./images/Screenshot 2024-12-30 212145.png" alt="" class="box06__items--img">
-          <img src="./images/Screenshot 2024-12-30 212328.png" alt="" class="box06__items--img">
-          <img src="./images/Screenshot 2024-12-30 212348.png" alt="" class="box06__items--img">
+          <img src="./images/web1.png" alt="" class="box06__items--img">
+          <img src="./images/web2.png" alt="" class="box06__items--img">
+          <img src="./images/web3.png" alt="" class="box06__items--img">
         </div>
       </div>
       <div class="box07">
